tests/snapshots/deserializer__bigint_primitive_u128_max.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nObject(340282366920938463463374607431768211455n)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BigIntObject(
        340282366920938463463374607431768211455,
    ),
}

