tests/snapshots/deserializer__bigint_primitive_zero.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nObject(0n)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: BigIntObject(
        0,
    ),
}

