tests/snapshots/deserializer__bigint_u64_max.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n18446744073709551615n"
---
=== VALUE ===
BigInt(18446744073709551615)

=== HEAP ===
Heap {}

