tests/snapshots/deserializer__bigint_zero.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\n0n"
---
=== VALUE ===
BigInt(0)

=== HEAP ===
Heap {}

