tests/snapshots/deserializer__biguint64array_resizable.snap
---
source: tests/deserializer.rs
description: "=== SOURCE ===\nnew BigUint64Array(new ArrayBuffer(8, { maxByteLength: 16 }))"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        max_byte_length: Some(
            16,
        ),
    },
    1: ArrayBufferView {
        kind: BigUint64Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

